--- a/index.html
+++ b/index.html
@@ -129,16 +129,16 @@
             <h2 class="section-title">Gallery</h2>
             <div class="gallery-grid">
                 <div class="gallery-item">
-                    <img src="gallery_image1.png" alt="Gallery Image 1">
-                    <a href="gallery_image1.png" download class="download-btn">Download PNG</a>
+                    <img src="gallery_image1.PNG" alt="Gallery Image 1">
+                    <a href="gallery_image1.PNG" download class="download-btn">Download PNG</a>
                 </div>
                 <div class="gallery-item">
-                    <img src="gallery_image2.png" alt="Gallery Image 2">
-                    <a href="gallery_image2.png" download class="download-btn">Download PNG</a>
+                    <img src="gallery_image2.PNG" alt="Gallery Image 2">
+                    <a href="gallery_image2.PNG" download class="download-btn">Download PNG</a>
                 </div>
                 <div class="gallery-item">
-                    <img src="gallery_image3.png" alt="Gallery Image 3">
-                    <a href="gallery_image3.png" download class="download-btn">Download PNG</a>
+                    <img src="gallery_image3.PNG" alt="Gallery Image 3">
+                    <a href="gallery_image3.PNG" download class="download-btn">Download PNG</a>
                 </div>
                 <div class="gallery-item">
                     <video controls>
@@ -191,7 +191,6 @@
       const rect = button.getBoundingClientRect();
       const size = Math.max(rect.width, rect.height) * 0.6;
       const ripple = document.createElement('span');
-
       ripple.classList.add('ripple-effect');
       ripple.style.width = ripple.style.height = size + 'px';
       ripple.style.left = (event.clientX - rect.left - size / 2) + 'px';
