--- a/index.html
+++ b/index.html
@@ -141,19 +141,19 @@
                     <a href="gallery_image3.PNG" download class="download-btn">Download PNG</a>
                 </div>
                 <div class="gallery-item">
-                    <video controls>
+                    <video controls poster="gallery_video1_poster.JPEG">
                         <source src="gallery_video1.mp4" type="video/mp4">
                     </video>
                     <a href="gallery_video1.mp4" download class="download-btn">Download MP4</a>
                 </div>
                 <div class="gallery-item">
-                    <video controls>
+                    <video controls poster="gallery_video2_poster.JPEG">
                         <source src="gallery_video2.mp4" type="video/mp4">
                     </video>
                     <a href="gallery_video2.mp4" download class="download-btn">Download MP4</a>
                 </div>
                 <div class="gallery-item">
-                    <video controls>
+                    <video controls poster="gallery_video3_poster.JPEG">
                         <source src="gallery_video3.mp4" type="video/mp4">
                     </video>
                     <a href="gallery_video3.mp4" download class="download-btn">Download MP4</a>
