--- a/index.html
+++ b/index.html
@@ -165,12 +165,12 @@
     <section id="contact" class="section contact-section animate-up">
         <div class="container">
             <h2 class="section-title">Contact</h2>
-            <form id="contactForm" class="contact-form">
-                <input type="text" name="name" placeholder="Your Name" required>
-                <input type="email" name="email" placeholder="Your Email" required>
-                <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
-                <button type="submit" class="contact-btn">Send Message</button>
-            </form>
+<form action="https://formspree.io/f/mgvyvabk" method="POST" class="contact-form">
+    <input type="text" name="name" placeholder="Your Name" required>
+    <input type="email" name="email" placeholder="Your Email" required>
+    <textarea name="message" rows="5" placeholder="Your Message" required></textarea>
+    <button type="submit" class="contact-btn">Send Message</button>
+</form>
             <div class="contact-info"></div>
         </div>
     </section>
