--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
     <section id="about" class="section animate-up">
         <div class="container">
             <h2 class="section-title">About</h2>
+          <div style="display:none;">
+  EditLabMedia is a creative brand led by a professional with 4+ years of experience in photography, videography, editing, and design. Skilled in Adobe tools, AI-assisted creativity, and visual storytelling.
+</div>
+
             <div class="about-content">
                 <p>
                   Creative and detail-oriented individual with 4 years of experience in photography, videography, editing, and graphic design. Proficient in a wide range of professional tools including Adobe Premiere Pro, DaVinci Resolve, After Effects, CapCut, Photoshop, and Lightroom. Experienced in logo design and visual branding, with strong skills in using AI tools for creative tasks. Well-versed in photography, videography, and editing.
@@ -102,6 +106,10 @@
     <section id="projects" class="section animate-up">
         <div class="container">
             <h2 class="section-title">Projects</h2>
+          <div style="display:none;">
+  EditLabMedia handles a wide range of visual projects including corporate branding videos, restaurant and café content, automotive marketing visuals, and fashion photography. Services include full production, editing, and creative direction.
+</div>
+
             <div class="projects-list">
                 <div class="project-item">
                     <h4>Corporate Visual Campaigns</h4>
@@ -130,6 +138,10 @@
     <section id="gallery" class="section animate-up">
         <div class="container">
             <h2 class="section-title">Gallery</h2>
+          <div style="display:none;">
+  The EditLabMedia gallery showcases downloadable photography and cinematic video content, including commercial visuals, fashion portfolios, and lifestyle storytelling work.
+</div>
+
             <div class="gallery-grid">
                 <div class="gallery-item">
                     <img src="gallery_image1.PNG" alt="Gallery Image 1">
@@ -168,6 +180,10 @@
 <section id="contact" class="section contact-section animate-up">
   <div class="container">
     <h2 class="section-title">Contact</h2>
+    <div style="display:none;">
+  Contact EditLabMedia for photography, videography, editing, and visual branding services. Inquiries are usually answered within 24 hours.
+</div>
+    
     <form action="https://formspree.io/f/mgvyvabk" method="POST" class="contact-form">
       <input type="text" name="name" placeholder="Your Name" required>
       <input type="email" name="email" placeholder="Your Email" required>
