--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <section id="home" class="hero animate-fade">
         <div class="container hero-flex">
             <div>
-                <h1>EditLabMedia</h1>
+                <h1>EditLabMedia By Amir</h1>
                 <h2 class="subtitle">Professional Photographer | Videographer | Editor | Designer</h2>
                 <p class="description">Specializing in creative visuals, cinematic editing, and modern graphic design for brands, content creators, and professionals.</p>
             </div>
