--- a/index.html
+++ b/index.html
@@ -2,14 +2,15 @@
 <html lang="fa">
 <head>
   <meta charset="UTF-8">
-  <title>EditLabMedia | Photography, Videography & Video Editing</title>
+  <title>EditLabMedia | Photographer, Videographer & Editor</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="EditLabMedia by Amir – Professional photographer | videographer | editor | designer – Creating cinematic visuals and clean edits for brands and creators.">
   <meta name="keywords" content="EditLabMedia, photography, videography, video editing, filmmaker, content creator, creative visuals, portfolio, motion design">
   <meta name="author" content="EditLabMedia">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" type="image/png" href="favicon.png">
+<!--   <link rel="icon" type="image/png" href="favicon.png"> -->
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <header class="header">
