--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="fa">
 <head>
   <meta charset="UTF-8">
-  <title>EditLabMedia | Photographer, Videographer & Editor</title>
+  <title>EditLabMedia | Photographer | Videographer | Editor | Designer</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="EditLabMedia by Amir – Professional photographer | videographer | editor | designer – Creating cinematic visuals and clean edits for brands and creators.">
+  <meta name="description" content="EditLabMedia by Amir – Cinematic visuals with a creative touch and clean, professional editing for brands, creators, and modern media projects.">
   <meta name="keywords" content="EditLabMedia, photography, videography, video editing, filmmaker, content creator, creative visuals, portfolio, motion design">
   <meta name="author" content="EditLabMedia">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
