--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fa">
 <head>
   <meta charset="UTF-8">
-  <title>EditLabMedia | Photographer | Videographer | Editor | Designer</title>
+  <title>EditLabMedia | Photographer, Videographer & Editor</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="EditLabMedia by Amir – Cinematic visuals with a creative touch and clean, professional editing for brands, creators, and modern media projects.">
   <meta name="keywords" content="EditLabMedia, photography, videography, video editing, filmmaker, content creator, creative visuals, portfolio, motion design">
