--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   <meta charset="UTF-8">
   <title>EditLabMedia | Photographer, Videographer & Editor</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="EditLabMedia by Amir – Cinematic visuals with a creative touch and clean, professional editing for brands, creators, and modern media projects.">
+  <meta name="description" content="EditLabMedia – Cinematic visuals with a creative touch and clean, professional editing for brands, creators, and modern media projects.">
   <meta name="keywords" content="EditLabMedia, photography, videography, video editing, filmmaker, content creator, creative visuals, portfolio, motion design">
   <meta name="author" content="EditLabMedia">
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Playfair+Display:wght@700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link rel="icon" type="image/png" href="favicon.png">
 </head>
 <body>
     <header class="header">
@@ -41,7 +41,7 @@
     <section id="home" class="hero animate-fade">
         <div class="container hero-flex">
             <div>
-                <h1>EditLabMedia By Amir</h1>
+                <h1>EditLabMedia</h1>
                 <h2 class="subtitle">Professional Photographer | Videographer | Editor | Designer</h2>
                 <p class="description">Specializing in creative visuals, cinematic editing, and modern graphic design for brands, content creators, and professionals.</p>
             </div>
